--- a/recipes.html
+++ b/recipes.html
@@ -6,16 +6,117 @@
     <title>Recipes</title>
 </head>
 <body>
-    <a href = "#main"> Skip to Main Content</a>
+    <a href="#main">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "pets.html"> Pets</a></li>
-                <li><a href = "recipes.html">Recipes</a></li>
-                <li><a href = "travel.html">Travel</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pets.html">Pets</a></li>
+                <li><a href="recipes.html">Recipes</a></li>
+                <li><a href="travel.html">Travel</a></li>
             </ul>
         </nav>
     </header>
+    <main id="main">
+        <h1>Recipes</h1>
+        <div>
+            <style type="text/css">	
+                summary{
+            font-size: 14pt;
+            font-family: arial;
+            color: #0174bb;
+        }
+        </style>
+            <title>recipes</title>
+            <details>
+                <summary><strong>Chocolate Chip Cookies<img src="images/recipes/double_chocolate_cookies.png" width = "400" alt="chocolate chip double_chocolate_cookies">
+                </strong></summary>
+                <h3>I swear by Buzfeed's Tasty Chocolate chip cookies</h3>
+                <h4>Ingredients</h4>
+                <img src="images/recipes/double_chocolate_chips.png" width="200" alt="chocolate chips">
+                <ul>
+                    <li>1 cup bread flour(125 g)</li>
+                    <li>¾ cup all-purpose flour(95 g)</li>
+                    <li>2 teaspoons kosher salt, or 1½ teaspoons table salt</li>
+                    <li>1 teaspoon baking soda</li>
+                    <li>1 cup unsalted butter(225 g), 2 sticks</li>
+                    <li>2 tablespoons water, room temperature</li>
+                    <li>1 cup dark brown sugar(220 g)</li>
+                    <li>½ cup white sugar(100 g)</li>
+                    <li>2 teaspoons vanilla extract</li>
+                    <li>1 teaspoon espresso powder</li>
+                    <li>1 large egg</li>
+                    <li>1 large egg yolk</li>
+                    <li>½ cup semi-sweet chocolate chips(85 g)</li>
+                    <li>5 oz dark chocolate(130 g), chopped</li>    
+                </ul>
+                <h4>Preparation</h4>
+                <ol>
+                    <li>In a medium bowl, sift together the flours, salt, and baking soda. Set aside.</li>
+                    <li>In a medium or large saucepan, add the butter and melt over medium heat. The larger the pan you use, the quicker the process will be!</li>
+                    <li>Bring the butter to a boil, stirring frequently. As the water begins to boil out of the butter, the milk solids in the butter will separate, sink to the bottom, and begin to toast and brown. As this begins to happen, make sure to stir constantly so the butter browns evenly. It may become quite foamy, splatter a bit, and be difficult to see, so keep a close eye on it, removing from heat and continuing to stir if it starts to foam over.</li>
+                    <li>Once the butter has turned a nice nutty brown, remove from the heat and pour into a large liquid measuring cup to stop the cooking. Allow it to cool down for a minute or two, give it a stir, and carefully add 2-3 tablespoons of water to the butter to bring it back up to 1 cup (240 ml) of liquid.</li>
+                    <li>Set aside to cool to room temperature. To help speed this process up, you can place in the fridge for 10-15 minutes. You want to make sure the butter is still liquid when you’re adding it to the dough later on, so make sure to remove after 15 minutes.</li>
+                    <li>In a large bowl, add the sugars, vanilla, espresso powder, and cooled brown butter. Cream together with an electric hand mixer until light and fluffy, 1-2 minutes.</li>
+                    <li>Add the egg and yolk and beat until incorporated.</li>
+                    <li>Add the dry ingredients, about ⅓ of the mixture at a time, and beat between additions until just incorporated. It’s okay for there to be a bit of unmixed flour on the edge of bowl, this will be incorporated in the next step.</li>
+                    <li>Using a wooden spoon, fold the chocolate chips and chunks into the dough.</li>
+                    <li>Scoop the cookies onto a parchment paper-lined baking sheet in 3-tablespoon-sized mounds.</li>
+                    <li>For optimal flavor, cover and refrigerate for 1 hour or, even better, overnight.</li>
+                    <li>Preheat the oven to 350˚F (180˚C).</li>
+                    <li>Evenly space the dough 3 inches (8 cm) apart from one another on a parchment paper-lined baking sheet.</li>
+                    <li>Bake in a preheated oven for 12-14 minutes.</li>
+                    <li>Let the cookies cool on the baking sheet for 2-3 minutes before transferring to a cooling rack to cool completely.</li>
+                    <li>Enjoy!</li>
+                </ol>
+            </details>
+
+            <details>
+                <summary><strong>Marry me chicken<img src="images/recipes/marry me chicken.jpeg" width="400" alt="The best looking chicken you have ever seen"></strong></summary>
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>3 large chicken breasts boneless and skinless, sliced lengthwise into thin cutlets</li>
+                    <li>½ teaspoon salt</li>
+                    <li>¼ teaspoon ground black pepper</li>
+                    <li>6 tablespoons (50 grams) all-purpose flour</li>
+                    <li>2 tablespoons (30 ml) olive oil</li>
+                    <li>2 tablespoons (28 grams) unsalted butter</li>
+                    <li>3 cloves garlic minced</li>
+                    <li>1 cup (240 ml) chicken stock</li>
+                    <li>1 cup (240 ml) heavy cream (double cream in the UK)</li>
+                    <li>½ cup (43 grams) parmesan cheese grated</li>
+                    <li>1 teaspoon chili flakes</li>
+                    <li>¼ teaspoon oregano</li>
+                    <li>¼ teaspoon thyme</li>
+                    <li>⅓ cup sundried tomatoes chopped</li>
+                    <li>1 tablespoon fresh basil leaves</li>
+                </ul>
+                <h3>Preparation</h3>
+                <ol>
+                    <li>Season chicken with salt and pepper, then dredge in flour and shake off any excess.</li>
+                    <li>In a large skillet, heat olive oil and melt the butter on medium heat. Swirl pan to coat with oil and butter evenly.</li>
+                    <li>Brown the chicken (do not overcrowd and work in batches if needed) for 4-5 minutes on each side or until golden brown and cooked through. Transfer onto a plate, cover, and set aside.</li>
+                    <li>Saute the garlic for a minute or until it's fragrant. Add the chicken stock, and deglaze the pan scraping any bits stuck to the bottom of the pan with a wooden spoon.</li>
+                    <li>Adjust the heat to medium-low, and add the heavy cream and the parmesan cheese to the skillet. Allow the sauce to simmer for a couple of minutes, then season with chili flakes, thyme, and oregano.</li>
+                    <li>Season with salt and pepper to your taste, add the sundried tomatoes then put the chicken back in the sauce and let the sauce simmer and thicken for a few more minutes.</li>
+                    <li>Garnish with chopped fresh basil leaves and serve warm over pasta or rice.</li>
+                </ol>
+            </details>
+
+            <details>
+                <summary><strong>Ice (The Cold Kind)<img src="images/recipes/ice.png" width="400" alt="Cold and sweaty ice cubes"></strong></summary>
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>1 Cup of water</li>
+                </ul>
+                <h3>Preparation</h3>
+                <ol>
+                    <li>Pour the water into a medium sized bowl</li>
+                    <li>Place the bowl in the freezer. Leave for 2 hours</li>
+                    <li>After waiting, place the bowl outside of freezer. Serve in or outside of the bowl. Enjoy!</li>
+                </ol>
+            </details>
+        </div>
+    </main>
 </body>
-    </html>
+</html>
