--- a/travel.html
+++ b/travel.html
@@ -6,7 +6,7 @@
     <title>Travel</title>
 </head>
 <body>
-    <a href = "#main"> Skip to Main Content</a>
+    <a href = "#main">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
@@ -17,5 +17,35 @@
             </ul>
         </nav>
     </header>
+    <main id="main">
+        
+        <h1>Travel</h1>
+        <div>
+            <p>Being a low-income first generation college student, I have never travelled outside of the state. So here's a list of places I want to go to, as a reminder to why I am working hard now.</p>
+        </div>
+
+        <div>
+            <h2><strong>Yellow Stone National Park</strong></h2>
+            <img src="images/travel/yellowstone_cauldron.gif" width="200" alt="water lava">
+            <video controls="controls" width="200">
+                <source src="images/Travel/yellowstone_prism.MOV">
+            </video>            <img src="images/Travel/yellowstone_cauldron.jpg" width="200" alt="water lava">
+            <img src="images/Travel/yellowstone_sulphur_springs.JPG" width="200" alt="water lava">
+            <img src="images/Travel/yellowstone_sunset.jpg" width="200" alt="water lava">
+            <img src="images/Travel/yellowstone_travertine.JPG" width="200" alt="water lava">
+            <video controls="controls" width="200">
+                <source src="images/Travel/yellowstone_buffalo.MOV">
+            </video>
+        </div>
+
+        <div>            
+            <h2><strong>Seattle</strong></h2>
+            <img src="images/Travel/Seattle.jpg" width="200" alt="seattle cityscape"></div>
+        <div>
+            <h2>Yosemite National Park</h2>
+            <img src="images/Travel/yosemite parl.jpeg" width="200" alt="Yosemite National Park">
+        </div>
+
+    </main>
 </body>
     </html>
