--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style.css">
+
     <style>
         .tab {
             overflow: hidden;
@@ -32,11 +35,12 @@
           }
     </style>
     <title>Home</title>
+    <link rel="icon" type="images/favicon.io" href="/images/favicon.ico">
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
-    <header>
-        <nav>
+  <a href="#main" class="skip-link">Skip to Main Content</a>    
+  <header>
+        <nav class="navbar">
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "pets.html"> Pets</a></li>
@@ -48,15 +52,15 @@
     <main id="main">
         <h1>Jess is a Mess</h1>
         <div>
-            <p>Welcome to Jess is a Mess, your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
+            <p>Welcome to Jess is a Mess, my friends say I should start a podcast with my random thoughts and stories. I have a random obsession with traffic cones. My website will show you more random useless things, such as places I will never travel to, recipes I don't really do, and pets I have met and will miss in my life because UofM drains me entirely from taking care of animals  </p>
         </div>
 
         <div>
-            <p>If you're my GSI *Cough cough Rosalie* that's looking for a full time job, we will soon be hiring a web developer and event coordinator. Currently, I am convincing my office to hire a data analyst in the fall *COUGH COUGH ROSALIE*</p>
+            <p>If you're  looking for a full time job, my work will soon be hiring a web developer and event coordinator. Currently, I am convincing my office to hire a data analyst in the fall</p>
         </div>
 
         <div>
-            <p>I love my job, and I mean it. It's a hybrid office, and you get a ton of experience. Many people are recent graduates that stay for a year or 2 and then leave for top companies (becuase you get the BEST experience). We have puzzles in the break room, free snacks, and a fridge that's stocked up with our favorite beverages.</p>
+            <p>I love my job, and I mean it. It's a hybrid office, and you get a ton of experience. Many people are recent graduates that stay for a year or 2 and then leave for top companies (becuase you get the BEST experience).</p>
         </div>
 
         <div>
