--- a/recipes.html
+++ b/recipes.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Recipes</title>
+    <link rel="icon" type="images/favicon.io" href="/images/favicon.ico">
 </head>
 <body>
-    <a href="#main">Skip to Main Content</a>
+    <a href="#main" class="skip-link">Skip to Main Content</a>    
     <header>
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pets.html">Pets</a></li>
@@ -20,17 +23,12 @@
     <main id="main">
         <h1>Recipes</h1>
         <div>
-            <style type="text/css">	
-                summary{
-            font-size: 14pt;
-            font-family: arial;
-            color: #0174bb;
-        }
+
         </style>
             <title>recipes</title>
             <details>
-                <summary><strong>Chocolate Chip Cookies<img src="images/recipes/double_chocolate_cookies.png" width = "400" alt="chocolate chip double_chocolate_cookies">
-                </strong></summary>
+                <summary><strong>Chocolate Chip Cookies</strong></summary>
+                <img src="images/recipes/double_chocolate_cookies.png" width = "400" alt="chocolate chip double_chocolate_cookies">
                 <h3>I swear by Buzfeed's Tasty Chocolate chip cookies</h3>
                 <h4>Ingredients</h4>
                 <img src="images/recipes/double_chocolate_chips.png" width="200" alt="chocolate chips">
@@ -72,7 +70,8 @@
             </details>
 
             <details>
-                <summary><strong>Marry me chicken<img src="images/recipes/marry me chicken.jpeg" width="400" alt="The best looking chicken you have ever seen"></strong></summary>
+                <summary><strong>Marry me chicken</strong></summary>
+                <img src="images/recipes/marry me chicken.jpeg" width="400" alt="The best looking chicken you have ever seen">
                 <h3>Ingredients</h3>
                 <ul>
                     <li>3 large chicken breasts boneless and skinless, sliced lengthwise into thin cutlets</li>
@@ -104,7 +103,8 @@
             </details>
 
             <details>
-                <summary><strong>Ice (The Cold Kind)<img src="images/recipes/ice.png" width="400" alt="Cold and sweaty ice cubes"></strong></summary>
+                <summary><strong>Ice (The Cold Kind)</strong></summary>
+                <img src="images/recipes/ice.png" width="400" alt="Cold and sweaty ice cubes">
                 <h3>Ingredients</h3>
                 <ul>
                     <li>1 Cup of water</li>
