--- a/travel.html
+++ b/travel.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Travel</title>
+    <link rel="icon" type="images/favicon.io" href="/images/favicon.ico">
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
+    <a href="#main" class="skip-link">Skip to Main Content</a>    
     <header>
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "pets.html"> Pets</a></li>
