--- a/travel.html
+++ b/travel.html
@@ -43,7 +43,8 @@
 
         <div>            
             <h2><strong>Seattle</strong></h2>
-            <img src="images/Travel/Seattle.jpg" width="200" alt="seattle cityscape"></div>
+            <img src="images/Travel/Seattle.jpg" width="200" alt="seattle cityscape">
+        </div>
         <div>
             <h2>Yosemite National Park</h2>
             <img src="images/Travel/yosemite parl.jpeg" width="200" alt="Yosemite National Park">
