--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           }
     </style>
     <title>Home</title>
-    <link rel="icon" type="images/favicon.io" href="/images/favicon.ico">
+    <link rel="icon" type="images/favicon.io?" href="/images/favicon.ico">
 </head>
 <body>
   <a href="#main" class="skip-link">Skip to Main Content</a>    
