--- a/recipes.html
+++ b/recipes.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Recipes</title>
-    <link rel="icon" type="images/favicon.io" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
     <a href="#main" class="skip-link">Skip to Main Content</a>    
@@ -69,7 +69,7 @@
 
             <details>
                 <summary><strong>Marry me chicken</strong></summary>
-                <img src="images/recipes/marry me chicken.jpeg" width="400" alt="The best looking chicken you have ever seen">
+                <img src="images/recipes/marry-me-chicken.jpeg" width="400" alt="The best looking chicken you have ever seen">
                 <h3>Ingredients</h3>
                 <ul>
                     <li>3 large chicken breasts boneless and skinless, sliced lengthwise into thin cutlets</li>
@@ -102,7 +102,7 @@
 
             <details>
                 <summary><strong>Ice (The Cold Kind)</strong></summary>
-                <img src="images/recipes/ice.png" width="400" alt="Cold and sweaty ice cubes">
+                <img src="images/recipes/ice.png" width="400" alt="Ice cubes in a bowl">
                 <h3>Ingredients</h3>
                 <ul>
                     <li>1 Cup of water</li>
