--- a/pets.html
+++ b/pets.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Pets</title>
-    <link rel="icon" type="images/favicon.io" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
     <a href="#main" class="skip-link">Skip to Main Content</a>    
@@ -30,21 +30,23 @@
             <P>At night just as the rest of the family is ready to relax, Bacon suddenly wants to release all of his energy. He will place his toys on a mini couch and frantically drag the couch around, giving his toys "a ride." There is also a lot of rolling. Lots and lots of rolling.</P>
             <h3>Photo Gallery</h3>
             <!-- class examples-->
-            <div class="pet-photos">
-            <img src="images/pets/bacon/bacon_bandana.JPG" width ="200" alt = "Brown labradoodle wearing an orange bandana">
-            <img src="images/pets/bacon/bacon_graduation.JPG"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
-            <video width="200"  controls>
-                <source src="images/pets/bacon/bacon_agility.mov">
-                Your browser does not support the video tag.  This was a video of a girl and dog demonstrating a sit and stay procedure
-            </video>
-            <img src="images/pets/bacon/bacon_halloween.JPG"  width ="200" alt="Brown labradoodle wearing a pirate costume">
-
-            <h3>Likes</h3>
-            <ul>
-                <li>Belly rubs</li>
-                <li>Playing tug-of-war</li>
-                <li>Sneaking onto the couch</li>
-            </ul>
+            <div class="grid-containers">
+                <div class="pet-photos">
+                <img src="images/pets/bacon/bacon_bandana.JPG" width ="200" alt = "Brown labradoodle wearing an orange bandana">
+                <img src="images/pets/bacon/bacon_graduation.JPG"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
+                <video width="250"  controls>
+                    <source src="images/pets/bacon/bacon_agility.mov">
+                    Your browser does not support the video tag.  This was a video of a girl and dog demonstrating a sit and stay procedure
+                </video>
+                <img src="images/pets/bacon/bacon_halloween.JPG"  width ="200" alt="Brown labradoodle wearing a pirate costume">
+        
+                <h3>Likes</h3>
+                <ul>
+                    <li>Belly rubs</li>
+                    <li>Playing tug-of-war</li>
+                    <li>Sneaking onto the couch</li>
+                </ul>
+                </div>
             </div>
             <!-- Jackie Wolf -->
         </div>
@@ -58,7 +60,7 @@
             <div class="pet-photos"> 
             <img src="images/pets/baxter/baxterpuppy.JPG" width ="200" alt = "Black and white Maltese poodle dog laying on the floor with a green bone">
             <img src="images/pets/baxter/baxterchristmas.JPG"  width ="200" alt="Black and white Maltese poodle dog laying under a christmas tree">
-            <video width="200"  controls>
+            <video width="250"  controls>
                 <source src="images/pets/baxter/baxtervideo.mp4">
                 <!--Your browser does not support the video tag.  This was a video of a dog barking at a bone!-->
             </video>
@@ -107,18 +109,11 @@
             <div class="pet-photos"> 
             <img src="images/pets/Jax/IMG_20240127_151814_491.jpg" width ="200" alt = "Black and white Maltese poodle dog laying on the floor with a green bone">
             <img src="images/pets/Jax/IMG_20240127_151815_333.jpg"  width ="200" alt="Black and white Maltese poodle dog laying under a christmas tree">
-            <video width="200"  controls>
+            <video width="250"  controls>
                 <source src="images/pets/Jax/Snapchat-1057195995.mp4">
                 <!--Your browser does not support the video tag.  This was a video of a dog barking at a bone!-->
             </video>
             <img src="images/pets/Jax/IMG_20240127_152009_177.jpg"  width ="200" alt="Black and white Maltese poodle dog smelling a bush of flowers">
-
-            <h3>Likes</h3>
-            <ul>
-                <li>Catnip</li>
-                <li>Playing fetch without moving</li>
-                <li>Being held upsidedown</li>
-            </ul>
         </div>
         <div>
             <h3>Likes</h3>
@@ -139,7 +134,7 @@
             <div class="pet-photos"> 
             <img src="images/pets/Bubby/IMG_20240128_190337_544.jpg" width ="200" alt = "Black and white Maltese poodle dog laying on the floor with a green bone">
             <img src="images/pets/Bubby/IMG_20240128_190338_926.jpg"  width ="200" alt="Black and white Maltese poodle dog laying under a christmas tree">
-            <video width="200"  controls>
+            <video width="250"  controls>
                 <source src="images/pets/Bubby/bubbyvid.mp4">
                 <!--Your browser does not support the video tag.  This was a video of a dog barking at a bone!-->
             </video>
