--- a/travel.html
+++ b/travel.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Travel</title>
-    <link rel="icon" type="images/favicon.io" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
     <a href="#main" class="skip-link">Skip to Main Content</a>    
