--- a/pets.html
+++ b/pets.html
@@ -57,22 +57,25 @@
             <p>Baxter Q. Dog is a 7 year old Maltese/poodle hybrid. While he likes to sleep like a human, he will let you know he wants to fully sleep with a blanket and pillow. This was accidentally habituated from his owners pampering him when he was a puppy. One day, his owner stopped and he couldn't sleep thorughout the whole night. Hence, it is now part of a nightly ritual.</p> 
             <P>Baxter also likes to to take walks across the neighborhood and enjoys smelling every flower he comes into contact with.</P>
             <h3>Photo Gallery</h3>
-            <div class="pet-photos"> 
-            <img src="images/pets/baxter/baxterpuppy.JPG" width ="200" alt = "Black and white Maltese poodle dog laying on the floor with a green bone">
-            <img src="images/pets/baxter/baxterchristmas.JPG"  width ="200" alt="Black and white Maltese poodle dog laying under a christmas tree">
-            <video width="250"  controls>
-                <source src="images/pets/baxter/baxtervideo.mp4">
-                <!--Your browser does not support the video tag.  This was a video of a dog barking at a bone!-->
-            </video>
-            <img src="images/pets/baxter/baxtersmelltheflowers.jpg"  width ="200" alt="Black and white Maltese poodle dog smelling a bush of flowers">
+            <div class="grid-containers">
+                <div class="pet-photos"> 
+                <img src="images/pets/baxter/baxterpuppy.JPG" width ="200" alt = "Black and white Maltese poodle dog laying on the floor with a green bone">
+                <img src="images/pets/baxter/baxterchristmas.JPG"  width ="200" alt="Black and white Maltese poodle dog laying under a christmas tree">
+                <video width="250"  controls>
+                    <source src="images/pets/baxter/baxtervideo.mp4">
+                    <!--Your browser does not support the video tag.  This was a video of a dog barking at a bone!-->
+                </video>
+                <img src="images/pets/baxter/baxtersmelltheflowers.jpg"  width ="200" alt="Black and white Maltese poodle dog smelling a bush of flowers">
 
-            <h3>Likes</h3>
-            <ul>
-                <li>napping with humans</li>
-                <li>treats, specifically if you feed it to him like an airplane</li>
-                <li>Barking at new things</li>
-            </ul>
+                <h3>Likes</h3>
+                <ul>
+                    <li>napping with humans</li>
+                    <li>treats, specifically if you feed it to him like an airplane</li>
+                    <li>Barking at new things</li>
+                </ul>
+                </div>
             </div>
+
         </div>
         <div>
             <h2>Prince</h2>
