--- a/travel.html
+++ b/travel.html
@@ -29,7 +29,7 @@
 
         <div>
             <h2><strong>Yellow Stone National Park</strong></h2>
-            <img src="images/travel/yellowstone_cauldron.gif" width="200" alt="water lava">
+            <img src="images/Travel/yellowstone_cauldron.gif" width="200" alt="water lava moving">
             <video controls="controls" width="200">
                 <source src="images/Travel/yellowstone_prism.MOV">
             </video>            <img src="images/Travel/yellowstone_cauldron.jpg" width="200" alt="water lava">
@@ -44,6 +44,7 @@
         <div>            
             <h2><strong>Seattle</strong></h2>
             <img src="images/Travel/Seattle.jpg" width="200" alt="seattle cityscape">
+            <img src="images/Travel/seattle.gif" width="200" alt="seattle wind">
         </div>
         <div>
             <h2>Yosemite National Park</h2>
